--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,33 +5,33 @@ publish_to: 'none'
 version: 1.1.5+7
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   bot_toast: ^4.1.3
-  cached_network_image: ^3.3.0
-  cupertino_icons: ^1.0.6
-  firebase_analytics: ^10.6.2
-  firebase_core: ^2.20.0
-  flutter_keyboard_visibility: ^5.4.1
-  flutter_svg: ^2.0.8
-  flutter_widget_from_html: ^0.14.4+1
-  font_awesome_flutter: ^10.6.0
-  http: ^1.1.0
-  intl: ^0.18.1
-  ionicons: ^0.2.2
-  permission_handler: ^11.0.1
-  photo_view: ^0.14.0
-  pull_to_refresh: ^2.0.0
-  shared_preferences: ^2.2.2
-  shimmer: ^3.0.0
-  url_launcher: ^6.2.0
-  dio: ^5.3.3
+  cached_network_image: ^3.3.1
+  cupertino_icons: ^1.0.8
+  device_info_plus: ^10.1.0 #^9.1.0
+  dio: ^5.5.0+1
+  firebase_analytics: ^11.2.0 #^10.6.2
+  firebase_core: ^3.2.0 #^2.20.0
+  flutter_keyboard_visibility: ^6.0.0 #^5.4.1
+  flutter_svg: ^2.0.10+1
+  flutter_widget_from_html: ^0.15.1 #^0.14.4+1
+  font_awesome_flutter: ^10.7.0
+  http: ^1.2.2
   image_gallery_saver: ^2.0.3
-  device_info_plus: ^9.1.0
+  intl: ^0.19.0 #^0.18.1
+  ionicons: ^0.2.2
+  permission_handler: ^11.3.1
+  photo_view: ^0.15.0 #^0.14.0
+  pull_to_refresh: ^2.0.0
+  shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
